code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__context_cell_after_delta.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
assertion_line: 585
expression: output
---
 +----------------------------------------------------------------------------+
 |                                    Code                                    |
 +----------------------------------------------------------------------------+
 •   I can help with various tasks including:                            ↑Top
 ▼
     - Writing code
     - Reading files
     - Running commands


 ✶   Dir: /workspace  2 changes
      main

 +----------------------------------------------------------------------------+
 | What can I code for you today?                                             |
 +----------------------------------------------------------------------------+
 Read Only  (Shift+Tab change)                       Ctrl+G editor  •  API key
