code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__context_cell_browser_badge.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
assertion_line: 729
expression: output
---
 +----------------------------------------------------------------------------+
 |                                    Code                                    |
 +----------------------------------------------------------------------------+
 •                                                                       ↑Top
 ▼   - Writing code
     - Reading files
     - Running commands


 ✶   Dir: /workspace  1 change
     Browser: Example Domain  1280×720  2025-11-05T12:00:00Z
     browser_type=chromium, cursor_position=120,340

 +----------------------------------------------------------------------------+
 | What can I code for you today?                                             |
 +----------------------------------------------------------------------------+
 Read Only  (Shift+Tab change)                       Ctrl+G editor  •  API key
