code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__context_cell_expanded_deltas.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
assertion_line: 668
expression: output
---
 +----------------------------------------------------------------------------+
 |                                    Code                                    |
 +----------------------------------------------------------------------------+
 •   - Running commands                                                  ↑Top
 ▼

 ✶   Dir: /workspace/subdir  3 changes
      main  Reasoning: high
     Recent changes:
     • reasoning: medium → high  #3
     • branch: feature/context-ui → main  #2
     • cwd: /workspace → /workspace/subdir  #2

 +----------------------------------------------------------------------------+
 | What can I code for you today?                                             |
 +----------------------------------------------------------------------------+
 Read Only  (Shift+Tab change)                       Ctrl+G editor  •  API key
