code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__multiline_formatting.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: output
---
 +----------------------------------------------------------------------------+
 |                                    Code                                    |
 +----------------------------------------------------------------------------+
 •                                                                       ↑Top
 ▼   - Writing code
     - Reading files
     - Running commands


     R #3 · gpt-5.4 · Xs ago
 •   Here's a simple function:
 ▼
     + rust ----------------------------+
     |  fn hello() {                    |
     |      println!("Hello, world!");  |
     |  }                               |
     +----------------------------------+


 +----------------------------------------------------------------------------+
 | Where do you want to start?                                                |
 +----------------------------------------------------------------------------+
 Read Only  (Shift+Tab change)                       Ctrl+G editor  •  API key
