code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__scroll_spacing_scrolled_intact.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: scrolled
---
 +----------------------------------------------------------------------------+
 |                                    Code                                    |
 +----------------------------------------------------------------------------+
     Assistant reply number two with multiple paragraphs.
 •
 ▼   Here is another paragraph to expand height.

     Yet another paragraph for good measure.

 ›   Third user prompt to push history further.

     Assistant reply number three, still going strong.
 •
 ▼   - Bullet one
     - Bullet two
     - Bullet three

 ›   Fourth user prompt to guarantee overflow beyond the viewport height.

 +----------------------------------------------------------------------------+
 | Where do you want to start?                                                |
 +----------------------------------------------------------------------------+
 Read Only  (Shift+Tab change)                       Ctrl+G editor  •  API key
